--- a/pages/style.css
+++ b/pages/style.css
@@ -4,6 +4,10 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url("../images/fundo-quiz.png");
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .container{
@@ -11,6 +15,6 @@ body{
     flex-direction: column;
     align-items: center;
     background-color: blueviolet;
-    border-radius: 10px;
+    border-radius: 15px;
     border-style: solid;
 }
